--- a/site/src/styles/globals.css
+++ b/site/src/styles/globals.css
@@ -1,3 +1,5 @@
+@import "https://js.arcgis.com/4.25/@arcgis/core/assets/esri/themes/dark/main.css";
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
