improve hotspot view ui

--- a/site/src/styles/globals.css
+++ b/site/src/styles/globals.css
@@ -4,6 +4,6 @@
   height:100%;
   --gradient-color-1: #244780; 
   --gradient-color-2: #313760; 
-  --gradient-color-3: #5d7dad;  
-  --gradient-color-4: #1f2234;
+  --gradient-color-3: #375075;  
+  --gradient-color-4: #1f2a34;
 }
